@@ -29,6 +29,9 @@ svn trunk
 * In :mod:`paste.httpserver` handle ``.read()`` from 100 Continue
   properly (because of a typo it was doing a readline).
 
+* Update ``paste.util.mimeparse`` from `upstream
+  <http://code.google.com/p/mimeparse/>`_.
+
 1.7.2
 -----
 
